--- a/src/components/internal/YourMorph/mobileVersionYourMorph/MorphMobile/style.module.scss
+++ b/src/components/internal/YourMorph/mobileVersionYourMorph/MorphMobile/style.module.scss
@@ -36,7 +36,7 @@
       flex-wrap: nowrap;
       cursor: pointer;
       column-gap: 15px;
-      padding: 30px 0 70px 0;
+      padding: 30px 0 29px 0;
       width: 100vw;
       transition: all 0.25s ease-out;
     }
@@ -74,4 +74,11 @@
     margin-top: 35px;
     padding: 0 20px;
   }
+
 }
+
+.infoTitleAttr {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
